apps/dssp-jsp-demo-27-01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-jsp-demo-27-01
spec:
  selector:
    app: dssp-jsp-demo-27-01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-jsp-demo-27-01-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-jsp-demo-27-01.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-jsp-demo-27-01
#             port:
#               number: 80
